downloads/release-notes/1.2.4/RELEASE_NOTE.md
---
layout: release-note
title: Release note
---
# Overview of jBallerina {{ site.data.latest.metadata.version }}
The jBallerina {{ site.data.latest.metadata.version }} patch release improves upon the {{ site.data.latest.metadata.version }} release by introducing the features listed below and addressing a number of [bugs](https://github.com/ballerina-platform/ballerina-lang/issues?q=is%3Aissue+milestone%3A%22Ballerina+{{ site.data.latest.metadata.version }}%22+label%3AType%2FBug+is%3Aclosed) and [improvements](https://github.com/ballerina-platform/ballerina-lang/issues?q=is%3Aissue+milestone%3A%22Ballerina+{{ site.data.latest.metadata.version }}%22+is%3Aclosed+label%3AType%2FImprovement).

You can use the update tool to update to jBallerina {{ site.data.latest.metadata.version }} as follows.

**For existing users:**

If you are already using jBallerina version 1.2.0, or above, you can directly update your distribution to jBallerina {{ site.data.latest.metadata.version }} by executing the following command:

> $ ballerina dist update

However, you need to use the following commands instead of the above if you have installed:

- jBallerina 1.2.0 but switched to a previous version: `$ ballerina dist pull jballerina-{{ site.data.latest.metadata.version }}`
- a jBallerina version below 1.1.0: install via the [installers](https://ballerina.io/downloads/)

**For new users:**

If you have not installed jBallerina, then download the [installers](https://ballerina.io/downloads/) to install.

## Standard Library
- SASL/PLAIN authentication support for Kafka module

## Dev Tools
- Improved API documentation and error mappings in the Bindgen Tool

